2006-12-28  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=11359
          Incomplete repaint of table cell's collapsed border when changing only the cell

        * fast/repaint/table-cell-collapsed-border-expected.checksum: Added.
        * fast/repaint/table-cell-collapsed-border-expected.png: Added.
        * fast/repaint/table-cell-collapsed-border-expected.txt: Added.
        * fast/repaint/table-cell-collapsed-border.html: Added.

2006-12-28  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Alexey.

        - test for http://bugs.webkit.org/show_bug.cgi?id=11671
          REGRESSION (r13702): text-transform: capitalize changes non-breaking spaces to spaces

        * fast/text/capitalize-preserve-nbsp-expected.checksum: Added.
        * fast/text/capitalize-preserve-nbsp-expected.png: Added.
        * fast/text/capitalize-preserve-nbsp-expected.txt: Added.
        * fast/text/capitalize-preserve-nbsp.html: Added.

2006-12-28  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=10699
          div with border-radius does not redraw properly if element inside div is resized

        * fast/repaint/border-radius-repaint-expected.checksum: Added.
        * fast/repaint/border-radius-repaint-expected.png: Added.
        * fast/repaint/border-radius-repaint-expected.txt: Added.
        * fast/repaint/border-radius-repaint.html: Added.

2006-12-28  Rob Buis  <buis@kde.org>

        Reviewed by Mitz.

        http://bugs.webkit.org/show_bug.cgi?id=12011
        svg/custom/dynamic-svg-document-creation.svg is failing

        Correct the transform syntax errors (since the new transform
        parser is more strict).

        * svg/custom/dynamic-svg-document-creation.svg:

2006-12-27  Eric Seidel  <eric@eseidel.com>

        Reviewed by ggaren.
        