@@ -1,40 +1,0 @@
-layer at (0,0) size 800x600
-  RenderView at (0,0) size 800x600
-layer at (0,0) size 800x600
-  RenderBlock {HTML} at (0,0) size 800x600
-    RenderBody {BODY} at (8,8) size 784x584
-      RenderBlock {P} at (0,0) size 784x36
-        RenderText {#text} at (0,0) size 100x18
-          text run at (0,0) width 100: "Repaint test for "
-        RenderInline {I} at (0,0) size 759x36
-          RenderInline {A} at (0,0) size 301x18 [color=#0000EE]
-            RenderText {#text} at (100,0) size 301x18
-              text run at (100,0) width 301: "http://bugs.webkit.org/show_bug.cgi?id=11359"
-          RenderText {#text} at (401,0) size 759x36
-            text run at (401,0) width 4: " "
-            text run at (405,0) width 354: "Incomplete repaint of table cell's collapsed border when"
-            text run at (0,18) width 139: "changing only the cell"
-        RenderText {#text} at (139,18) size 4x18
-          text run at (139,18) width 4: "."
-      RenderTable {TABLE} at (0,52) size 436x405 [border: (5px none #808080)]
-        RenderTableSection {TBODY} at (0,5) size 436x400
-          RenderTableRow {TR} at (0,0) size 436x100
-            RenderTableCell {TD} at (0,49) size 110x2 [bgcolor=#C0C0C0] [r=0 c=0 rs=1 cs=1]
-            RenderTableCell {TD} at (110,45) size 107x9 [bgcolor=#C0C0C0] [border: (5px solid #FFFFFF) (5px none #000000) (2px solid #FFFFFF) none] [r=0 c=1 rs=1 cs=1]
-            RenderTableCell {TD} at (217,49) size 112x2 [bgcolor=#C0C0C0] [border: none (5px solid #008000) none (5px solid #008000)] [r=0 c=2 rs=1 cs=1]
-            RenderTableCell {TD} at (329,45) size 107x10 [bgcolor=#C0C0C0] [border: (5px solid #FFFFFF) none (3px solid #FFFFFF) (5px none #000000)] [r=0 c=3 rs=1 cs=1]
-          RenderTableRow {TR} at (0,100) size 436x100
-            RenderTableCell {TD} at (0,146) size 110x7 [bgcolor=#C0C0C0] [border: none (2px solid #FFFFFF) (5px none #000000) (5px solid #FFFFFF)] [r=1 c=0 rs=1 cs=1]
-            RenderTableCell {TD} at (110,148) size 107x4 [bgcolor=#C0C0C0] [border: (2px none #000000)] [r=1 c=1 rs=1 cs=1]
-            RenderTableCell {TD} at (217,146) size 112x7 [bgcolor=#C0C0C0] [border: none] [r=1 c=2 rs=1 cs=1]
-            RenderTableCell {TD} at (329,147) size 107x5 [bgcolor=#C0C0C0] [border: (3px none #000000)] [r=1 c=3 rs=1 cs=1]
-          RenderTableRow {TR} at (0,200) size 436x100
-            RenderTableCell {TD} at (0,244) size 110x12 [bgcolor=#C0C0C0] [border: (5px solid #008000) none (5px solid #008000) none] [r=2 c=0 rs=1 cs=1]
-            RenderTableCell {TD} at (110,249) size 107x2 [bgcolor=#C0C0C0] [border: none] [r=2 c=1 rs=1 cs=1]
-            RenderTableCell {TD} at (217,244) size 112x12 [bgcolor=#C0C0C0] [border: (5px solid #008000)] [r=2 c=2 rs=1 cs=1]
-            RenderTableCell {TD} at (329,249) size 107x2 [bgcolor=#C0C0C0] [border: none] [r=2 c=3 rs=1 cs=1]
-          RenderTableRow {TR} at (0,300) size 436x100
-            RenderTableCell {TD} at (0,346) size 110x7 [bgcolor=#C0C0C0] [border: (5px none #000000) (3px solid #FFFFFF) none (5px solid #FFFFFF)] [r=3 c=0 rs=1 cs=1]
-            RenderTableCell {TD} at (110,349) size 107x2 [bgcolor=#C0C0C0] [border: none] [r=3 c=1 rs=1 cs=1]
-            RenderTableCell {TD} at (217,346) size 112x7 [bgcolor=#C0C0C0] [border: (5px none #000000)] [r=3 c=2 rs=1 cs=1]
-            RenderTableCell {TD} at (329,349) size 107x2 [bgcolor=#C0C0C0] [r=3 c=3 rs=1 cs=1]
