@@ -1,3 +1,14 @@
+2006-12-28  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reverting the previous checkin, as it caused an assertion in layout tests.
+
+        * rendering/RenderTableCell.cpp:
+        (WebCore::RenderTableCell::borderLeft):
+        (WebCore::RenderTableCell::borderRight):
+        (WebCore::RenderTableCell::borderTop):
+        (WebCore::RenderTableCell::borderBottom):
+        * rendering/RenderTableCell.h:
+
 2006-12-28  Mitz Pettel  <mitz@webkit.org>
 
         Reviewed by Darin.
